small edits made to portfolio and lbcc

--- a/labwork/lbcc/index.html
+++ b/labwork/lbcc/index.html
@@ -48,7 +48,7 @@
                     <div class="box" id="rightp">
                         <img src="images/topimg3.jpg" alt="Workspace">
                         <h2>Career</h2> 
-                        <p>The Associate Degree or Certificate of Achievement is a two-year program leading to the Associate in Science (A.S.) degree. It is designed to prepare students for employment in a Web Development related field.</p>
+                        <p>The Associate Degree is a two-year program leading to the Associate in Science (A.S.) degree. It is designed to prepare students for employment in a Web Development related field.</p>
                     </div>
                 
                 </section>
