--- a/homework/homework3/tuition_calculator.html
+++ b/homework/homework3/tuition_calculator.html
@@ -75,7 +75,7 @@
 
     <body>
         <header>
-            <img src="lbcc_logo.svg">
+            <img src="lbcc_logo.svg" alt="LBCC logo">
         </header>
         <main>
             <h1>LBCC Tuition Calculator</h1>
